# code-risk-agent

./: .env.example  .gitignore  CodeRisk-Agent-v0.2.1-源码.md  CodeRisk-Agent-v0.3.0-Source.md  CodeRisk-Agent-v0.3.1-Source.md  CodeRisk-Agent-v0.3.2-Source.md  CodeRisk-Agent-完整项目文档.md  CodeRisk-Agent-源码.md  LICENSE  README.md  _fix.py  main.py  orchestrator.py  pyproject.toml
agents/: __init__.py  deep_verifier.py  report_generator.py  semantic_analyzer.py  static_analyzer.py
core/: __init__.py  attack_knowledge.py  cve_client.py  dependency_scanner.py  llm_client.py  memory.py  models.py  retry.py  semgrep_runner.py  taint_analyzer.py
demo-audio/: generate_all.sh
docs/: README.md  architecture-review.md  demo-video-script.md  module-analysis.md  project-specification.md  rocm-optimization.md  submission-checklist.md
scripts/: README.md  download_cve_data.py  download_osv_data.py
tests/: __init__.py  test_cve_client.py  test_llm_client.py  test_memory.py  test_schemas.py  test_static_analyzer.py
tests/test_cases/: buffer_overflow.c  code_injection.py  command_injection.c  memory_issues.c  sql_injection.py
