[project]
name = "code-risk-agent"
version = "0.3.2"
description = "AI-powered code quality and risk analysis agent"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Yang Weike"}
]

dependencies = [
    "pydantic>=2.0",
    "rich>=13.0",
    "httpx>=0.25",
    "tree-sitter>=0.21",
    "semgrep>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[project.scripts]
code-risk = "main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
